--- a/.github/workflows/update-news.yml
+++ b/.github/workflows/update-news.yml
@@ -1,8 +1,12 @@
 name: update news
 
+# on:
+#   schedule:
+#     - cron: '0 */3 * * *'
 on:
-  schedule:
-    - cron: '0 */3 * * *'
+  push:
+    branches:
+      - development
 
 jobs:
   build:
@@ -16,6 +20,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '10.x'
+
+      # - name: Setup tmate session
+      #   uses: mxschmitt/action-tmate@v1
 
       - name: Cache dependencies
         uses: actions/cache@v1
@@ -65,11 +72,11 @@ jobs:
           git push origin $BRANCH_NAME
 
       - name: Create pull request
-        if: steps.branch.outputs.created == 'true'
+        if: steps.git-diff.outputs.hasdiff == 'true' && steps.branch.outputs.created == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          timedatectl set-timezone Asia/Tokyo
+          sudo timedatectl set-timezone Asia/Tokyo
           sudo snap install hub --classic
           git remote set-url origin "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY"
           hub pull-request \
